SR-10611: ProcessInfo.activeProcessorCount too high in containerized Linux

- On Linux, use sched_getaffinity() falling back to
  sysconf(_SC_NPROCESSORS_ONLN) as this should provide a better
  value for ProcessInfo.activeProcessorCount when running under
  cgroups (eg Docker).